feat(hwk): add task 4,5 : modified 2,3

--- a/Homework21/Task2/index.html
+++ b/Homework21/Task2/index.html
@@ -25,13 +25,13 @@
 
         <div class="container-input">
             <input class='my-input' type="text" placeholder="Name..." />
-            <button class="add-btn">Add Item</button>
+            <button class="add-btn" onclick="addTaskFunction()">Add Item</button>
         </div>
         <div class="container-body">
 
         </div>
         <div class="container-remove">
-            <button class="remove-btn">Clear Items</button>
+            <button class="remove-btn" onclick="allTaskRemove()">Clear Items</button>
         </div>
     </div>
 
