feat: add features

--- a/Homework21/Task7_Timer/index.html
+++ b/Homework21/Task7_Timer/index.html
@@ -12,33 +12,35 @@
 
 <body>
     <div class="wrapper">
-        <div class="set-timeout">
-            <div>
-                <label>Hours: </label>
-                <input class="hours" type="number">
+        <div class="content">
+            <div class="set-timeout">
+                <div>
+                    <label>Hours: </label>
+                    <input class="hours" type="number">
+                </div>
+                <div>
+                    <label>Minutes: </label>
+                    <input class="minutes" type="number">
+                </div>
+                <div>
+                    <label>Seconds: </label>
+                    <input class="seconds" type="number">
+                </div>
             </div>
-            <div>
-                <label>Minutes: </label>
-                <input class="minutes" type="number">
+            <div class="submit-btns">
+                <div>
+                    <button class="stop-play-btn">Stop</button>
+                </div>
+                <div>
+                    <button class="start-btn">Start</button>
+                </div>
+                <div>
+                    <button class="reset-btn">reset</button>
+                </div>
             </div>
-            <div>
-                <label>Seconds: </label>
-                <input class="seconds" type="number">
-            </div>            
-        </div>
-        <div class="submit-btns">
-            <div>
-                <button class="stop-play-btn">Stop</button>
-            </div>
-            <div>
-                <button class="start-btn" onclick='startTimer()'>Start</button>
-            </div>
-            <div>
-                <button class="reset-btn">reset</button>
-            </div>        
-        </div>
-        <div class="output">
+            <div class="output">
 
+            </div>
         </div>
     </div>
 
