--- a/22.Fetch-API/1.Select-with-dog-breeds/index.html
+++ b/22.Fetch-API/1.Select-with-dog-breeds/index.html
@@ -1,26 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dog Breeds</title>
 
-    <link rel="stylesheet" href="./style.css" />
-  </head>
-  <body>
-    <div>
-      <select class="our-select">
-        <option value="">--Select a breed--</option>
-        <option value="">Akita</option>
-        <option value="">Beagle</option>
-        <option value="">Dalmatian German Shepherd Husky</option>
-        <option value="">Labrador</option>
-        <option value="">Pug</option>
-        <option value="">Golden Retriever Cocker Spaniel</option>
-      </select>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Dog Breeds</title>
+
+  <link rel="stylesheet" href="./style.css" />
+</head>
+
+<body>
+  <div class="content">
+    <select class="our-select">
+      <option value="">--Select a breed--</option>
+      <option value="akita">Akita</option>
+      <option value="beagle">Beagle</option>
+      <option value="dalmatian">Dalmatian</option>
+      <option value="germanshepherd">German Shepherd</option>
+      <option value="husky">Husky</option>
+      <option value="labrador">Labrador</option>
+      <option value="pug">Pug</option>
+      <option value="retriever-golden">Golden Retriever</option>
+      <option value="spaniel-cocker">Cocker Spaniel</option>
+    </select>
+
+    <div class="img-div">
+
     </div>
+  </div>
 
-    <script src="./index.js"></script>
-  </body>
+  <script src="./index.js"></script>
+</body>
+
 </html>
